Improved margins all around, corrected .title and .content spacing, changed colors.

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root {
     --primary: rgb(132, 22, 196);
     --secondary: #333940;
-    --tertiary: rgb(224, 202, 72);
+    --tertiary: rgb(214, 196, 93);
     --quaternary: white;
 }
 
@@ -17,10 +17,11 @@ body {
     flex-direction: column;
     background-color: var(--secondary);
     /* font-family: ; */
+    color: azure;
 }
 
 a {
-    color: var(--secondary);
+    color: var(--quaternary);
     text-decoration: none;
 }
 
@@ -29,7 +30,7 @@ header {
     background-color: var(--tertiary);
 }
 
-nav {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -51,20 +52,12 @@ header ul li {
 
 /* MAIN SECTION */
 /* .banner section */
-/* .banner section */
 .banner {
     position: relative;
     width: 100%;
     height: 161px;
     background-color: var(--primary);
 }
-
-/* .banner-background {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-} */
 
 .profile-picture {
     position: relative;
@@ -98,27 +91,43 @@ header ul li {
 
 /* .title section */
 .title {
-    display: flex;
+    display: block;
+    width: 20%;
     background-color: var(--tertiary);
     background-clip: content-box;
-    width: 200px;
+    text-align: right;
+    margin: 10px;
+}
+
+.content {
+    display: block;
+    width: 100%;
 }
 
 /* .project-links section */
-.project-links {
+#project-links {
     display: inline-flex;
     flex-wrap: wrap;
 }
 
-#contact-me nav {
+#project-links img {
+    border: 5px solid var(--tertiary);
+    margin: 5px;
+}
+
+/* .featured-project {
 
 }
+
+#contact-me nav {
+
+} */
 
 #contact-me ul {
     list-style-type: none;
 }
 
-#contact-me li {
+#contact-me ul li {
     display: inline-block;
     margin-left: 25px;
 }
